--- a/package.json
+++ b/package.json
@@ -5,25 +5,29 @@
   "dependencies": {
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
-    "@mui/icons-material": "^5.15.18",
-    "@mui/material": "^5.15.18",
+    "@mui/icons-material": "^5.15.17",
+    "@mui/material": "^5.15.17",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "emailjs-com": "^3.2.0",
-    "framer-motion": "^11.1.7",
+    "framer-motion": "^11.1.9",
+    "i18next": "^23.11.3",
+    "i18next-browser-languagedetector": "^7.2.1",
+    "i18next-http-backend": "^2.5.1",
     "leaflet": "^1.9.4",
     "react": "^18.3.1",
+    "react-countup": "^6.5.3",
     "react-dom": "^18.3.1",
+    "react-i18next": "^14.1.1",
     "react-icons": "^5.2.0",
-    "react-intl-tel-input": "^8.2.0",
+    "react-intersection-observer": "^9.10.2",
     "react-leaflet": "^4.2.1",
-    "react-phone-input-2": "^2.15.1",
     "react-router-dom": "^6.23.0",
     "react-scripts": "5.0.1",
     "react-slideshow-image": "^4.3.1",
     "styled-components": "^6.1.9",
-    "tailwindcss": "^3.4.3",
+    "swiper": "^11.1.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
